# Code

./: README.md  ncpp.sh
17032026/src/: main
20260317/: CMakeLists.txt
20260317/src/: tree.in
Test/: CMakeLists.txt
Test/src/: main  main.cpp
cpp/DSA/insertion_sort/: CMakeLists.txt
cpp/DSA/insertion_sort/src/: main  main.cpp
cpp/course/1-first_cpp_program/: CMakeLists.txt
cpp/course/1-first_cpp_program/src/: main  main.cpp
cpp/pbinfo/105-max2/src/: main.cpp
cpp/pbinfo/109-Paritate/: CMakeLists.txt
cpp/pbinfo/109-Paritate/src/: main  main.cpp
cpp/pbinfo/1258-scadere2/: CMakeLists.txt
cpp/pbinfo/1260-asii/: CMakeLists.txt
cpp/pbinfo/1260-asii/src/: main  main.cpp
cpp/pbinfo/1273-uciv/: CMakeLists.txt
cpp/pbinfo/1273-uciv/src/: main  main.cpp
cpp/pbinfo/3178-Copii2/: CMakeLists.txt
cpp/pbinfo/3178-Copii2/src/: main  main.cpp
cpp/pbinfo/3185-Concurs1/: CMakeLists.txt
cpp/pbinfo/3185-Concurs1/src/: main  main.cpp
cpp/pbinfo/3231-AfisareNumere2/: CMakeLists.txt
cpp/pbinfo/3232-AfisareNumerePare2/: CMakeLists.txt
cpp/pbinfo/3232-AfisareNumerePare2/src/: main  main.cpp
cpp/pbinfo/327-AfisareNumere/: CMakeLists.txt
cpp/pbinfo/327-AfisareNumere/src/: main
cpp/pbinfo/328-AfisareNumere1/src/: main.cpp
cpp/pbinfo/330-AfisareNumerePare/: CMakeLists.txt
cpp/pbinfo/330-AfisareNumerePare/src/: main  main.cpp
cpp/pbinfo/331-AfisareNumereImpare/: CMakeLists.txt
cpp/pbinfo/331-AfisareNumereImpare/src/: main  main.cpp
cpp/pbinfo/3983-afisare_M1/src/: main  main.cpp
cpp/pbinfo/3984-afisare_M2/src/: main
cpp/pbinfo/4283-LowMem1/: CMakeLists.txt
cpp/pbinfo/4283-LowMem1/src/: lowmem1.in  lowmem1.out  main  main.cpp
cpp/pbinfo/469-Interval2/src/: main.cpp
cpp/pbinfo/4906-numere_p10/: CMakeLists.txt
cpp/pbinfo/4906-numere_p10/src/: main.cpp
cpp/pbinfo/4907-afisMul23/src/: main.cpp
cpp/pbinfo/813-Globuri/: CMakeLists.txt
cpp/pbinfo/816-Sticle/: CMakeLists.txt
cpp/pbinfo/832-Nota/: CMakeLists.txt
cpp/pbinfo/941-Urare/: CMakeLists.txt
cpp/pbinfo/941-Urare/src/: main.cpp
cpp/suli/20032026/: CMakeLists.txt
cpp/suli/20032026-1/: CMakeLists.txt
cpp/suli/20032026-1/src/: main
pbinfo/105-max2/: CMakeLists.txt
pbinfo/105-max2/src/: main.cpp
pbinfo/1258-scadere2/src/: main  main.cpp
pbinfo/3231-AfisareNumere2/src/: main  main.cpp
pbinfo/327-AfisareNumere/src/: main.cpp
pbinfo/328-AfisareNumere1/: CMakeLists.txt
pbinfo/328-AfisareNumere1/src/: main  main.cpp
pbinfo/3983-afisare_M1/: CMakeLists.txt
pbinfo/3984-afisare_M2/: CMakeLists.txt
pbinfo/3984-afisare_M2/src/: main.cpp
pbinfo/4360-Trixie1/: CMakeLists.txt
pbinfo/4360-Trixie1/src/: main  main.cpp
pbinfo/469-Interval2/: CMakeLists.txt
pbinfo/469-Interval2/src/: main
pbinfo/4906-numere_p10/src/: main
pbinfo/4907-afisMul23/: CMakeLists.txt
pbinfo/4907-afisMul23/src/: main
pbinfo/4917-progresie9/: CMakeLists.txt
pbinfo/4917-progresie9/src/: main  main.cpp
pbinfo/816-Sticle/src/: main.cpp
pbinfo/832-Nota/src/: main
pbinfo/939-sum00/: CMakeLists.txt
pbinfo/939-sum00/src/: main.cpp
pbinfo/941-Urare/src/: main
(+10 files in other folders)
